--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,11 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
+  --chart-6: oklch(0.645 0.246 16.439);
+  --chart-7: oklch(70.768% 0.11236 3.647);
+  --chart-8: oklch(44.419% 0.08551 264.833);
+  --chart-9: oklch(0.645 0.246 16.439);
+  --chart-10: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -107,6 +112,11 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
+  --chart-6: oklch(0.645 0.246 16.439);
+  --chart-7: oklch(70.768% 0.11236 3.647);
+  --chart-8: oklch(53.386% 0.25918 262.975);
+  --chart-9: oklch(0.645 0.246 16.439);
+  --chart-10: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
